<resources>
    <string name="app_name">Yaadi App</string>
    <string name="product_image">Product image</string>
    <string name="product_name">Product Name</string>
    <string name="current_quantity">Current Quantity</string>
    <string name="quantity">Quantity:</string>
    <string name="unit">Unit:</string>
    <string name="kgs">Kgs</string>
    <string name="packets">Packets</string>
    <string name="boxes">Boxes</string>
    <string name="pcs">Pcs</string>
    <string name="units">Units</string>
    <string name="supplier_s_email">Supplier\'s Email</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="product_description">Product Description</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="qty">Qty</string>
    <string name="quantity_label">Quantity: </string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="order_from_supplier">Order From Supplier</string>
    <string name="sale">sale</string>
    <string name="delete_all_dialog">Delete all products?</string>
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
</resources>
