<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context=".ProductDetailsActivity">

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:contentDescription="@string/product_image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_image"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_name_edit_text"
            android:layout_marginTop="24dp"
            android:hint="@string/product_name"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_description_edit_text"
            android:inputType="textMultiLine"
            android:layout_marginTop="16dp"
            android:hint="@string/product_description"
            android:importantForAutofill="no"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_edit_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:hint="Quantity"
                android:inputType="number"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/button_increase_quantity"
                    android:text="+"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/button_decrease_quantity"
                    android:text="-"
                    android:textStyle="bold"/>

            </LinearLayout>

            <Spinner
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:id="@+id/unit_spinner"
                android:entries="@array/unit_options"
                android:spinnerMode="dropdown"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="  ₹"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"  />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/price_edit_text"
                android:layout_gravity="center_vertical"
                android:inputType="number"
                android:hint="Price/Unit"
                android:importantForAutofill="no"/>


        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/supplier_name_edit_text"
            android:inputType="text"
            android:layout_marginTop="16dp"
            android:hint="@string/supplier_name"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/supplier_email_edit_text"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/supplier_s_email"
            android:importantForAutofill="no"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_from_supplier"
            android:layout_gravity="center"
            android:id="@+id/order_from_supplier_button"/>

    </LinearLayout>

</ScrollView>